<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="16dp"
    tools:context=".view.ConnectFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lobby"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/username_text_input_layout"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginVertical="16dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toTopOf="@id/host_text_input_layout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/host_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/username_text_input_layout"
        app:layout_constraintEnd_toEndOf="@id/username_text_input_layout"
        app:layout_constraintTop_toBottomOf="@id/username_text_input_layout"
        app:layout_constraintBottom_toTopOf="@id/radio_group"
        android:layout_marginVertical="16dp"
        android:hint="@string/hint_host"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/host_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/host_text_input_layout"
        app:layout_constraintEnd_toEndOf="@id/host_text_input_layout"
        app:layout_constraintTop_toBottomOf="@id/host_text_input_layout"
        app:layout_constraintBottom_toTopOf="@id/checkbox_emulator"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_host"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_client"
            android:layout_marginStart="32dp"
            />

    </RadioGroup>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_emulator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecting_to_an_emulator"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_create_join_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        tools:visibility="visible"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_join_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_game"
        app:layout_constraintStart_toStartOf="@id/radio_group"
        app:layout_constraintEnd_toEndOf="@id/radio_group"
        app:layout_constraintTop_toBottomOf="@id/checkbox_emulator"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="20dp"
        />


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/waiting_for_other_players"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/progress_circular"
        android:layout_marginBottom="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>