<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ConnectFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/game_title"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="32dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_history"
        android:layout_marginBottom="16dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_history"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_practice"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_practice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_history" />

</androidx.constraintlayout.widget.ConstraintLayout>